--- a/georgienewson/assets/css/main.css
+++ b/georgienewson/assets/css/main.css
@@ -3863,7 +3863,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#sidebar {
-				display: none;
+				display: block;
 			}
 
 		}
