--- a/georgienewson/assets/css/main.css
+++ b/georgienewson/assets/css/main.css
@@ -3230,6 +3230,8 @@ input, select, textarea {
 			@media screen and (max-width: 736px) {
 
 				.wrapper > .inner {
+					display: block;
+					width: 100%;
 					padding: 3em 2em 1em 2em ;
 				}
 
